# font-obfuscator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
font_obfuscator/: __init__.py  obf.py  sprites.py
