[tool.poetry]
name = "font-obfuscator"
version = "0.1.1"
description = ""
authors = ["Pony.Ma <mtf201013@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ma-pony/font-obfuscator"
homepage = "https://github.com/ma-pony/font-obfuscator"
packages = [{ include = "font_obfuscator" }]

[tool.poetry.dependencies]
python = "^3.10"
fonttools = {extras = ["lxml", "ufo", "unicode", "woff"], version = "^4.53.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
